--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry including="**/*.java" kind="src" output="target/classes" path="src">
+	<classpathentry kind="src" output="target/classes" path="src">
 		<attributes>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
@@ -11,14 +11,16 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/java_lib/boilerpipe/boilerpipe-1.2.0/lib/nekohtml-1.9.13.jar"/>
-	<classpathentry kind="lib" path="D:/java_lib/boilerpipe/boilerpipe-1.2.0/lib/xerces-2.9.1.jar"/>
-	<classpathentry kind="lib" path="D:/java_lib/boilerpipe/boilerpipe-1.2.0/boilerpipe-1.2.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/home/lla/javalibs/boilerpipe/boilerpipe-1.2.0/boilerpipe-1.2.0.jar"/>
+	<classpathentry kind="lib" path="/home/lla/javalibs/boilerpipe/boilerpipe-1.2.0/lib/xerces-2.9.1.jar"/>
+	<classpathentry kind="lib" path="/home/lla/javalibs/boilerpipe/boilerpipe-1.2.0/lib/nekohtml-1.9.13.jar"/>
+	<classpathentry kind="lib" path="/home/lla/javalibs/email/smtp-1.5.2.jar"/>
+	<classpathentry kind="lib" path="/home/lla/javalibs/email/mailapi-1.5.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
